If there are very few guesses remaining, the hint button tells the player the tens digit

--- a/guessinggame.css
+++ b/guessinggame.css
@@ -72,7 +72,7 @@ p, label {
   width: 1em;
   height: 1em;
 }
-.hintText {
+#hintText {
   text-align: center;
   margin-top: 1.3em;
   display: none;
