--- a/guessinggame.css
+++ b/guessinggame.css
@@ -61,7 +61,10 @@ p, label {
   text-align: center;
   width: 50%;
   margin: auto;
-  padding-top: 20px;
+  padding-top: 35px;
+}
+.left p {
+  font-style: italic;
 }
 .hint {
   display: inline-block;
