--- a/guessinggame.css
+++ b/guessinggame.css
@@ -2,6 +2,9 @@
   padding: 0;
   margin: 0;
 }
+*:focus {
+  outline: none;
+}
 body {
   background-color: #f0fff0;
 }
@@ -49,7 +52,11 @@ p, label {
 .guess input[type="text"] {
   margin: auto;
   margin-bottom: 1.5em;
-  color: darkgreen;
+  border-width: thin;
+}
+.guess input:focus {
+  border-color: #ffe0d8;
+  border-width: medium;
 }
 .guess label[for="submit"] {
   display: inline-block;
